--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "dependencies": {
         "element-ui": "^2.15.1",
         "hooper": "^0.3.4",
+        "vue-burger-menu": "^2.0.5",
         "vue-flip": "^1.0.2",
         "vue-flipper": "^1.0.0",
+        "vue-mq": "^1.0.1",
         "vue-router": "^3.5.1"
     }
 }
